# secure-vault

./: .gitignore  DESIGN.md  README.md  SECURITY_REVIEW.md  THREAT_MODEL.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/securevault/: __init__.py  aead.py  cli.py  clipboard.py  entries.py  errors.py  fileformat.py  kdf.py  locking.py  memory.py  passwordgen.py  repository.py  storage.py  vault.py
tests/: test_aead.py  test_cli.py  test_clipboard.py  test_entries.py  test_fileformat.py  test_integration.py  test_kdf.py  test_locking.py  test_memory.py  test_passwordgen.py  test_repository.py  test_storage.py  test_vault.py
